--- a/portfolio10/package.json
+++ b/portfolio10/package.json
@@ -20,10 +20,10 @@
     "@sanity/default-layout": "^2.10.0",
     "@sanity/default-login": "^2.8.0",
     "@sanity/desk-tool": "^2.10.1",
+    "@sanity/image-url": "^0.140.22",
     "@sanity/vision": "^2.10.0",
     "prop-types": "^15.7",
     "react": "^17.0",
     "react-dom": "^17.0"
-  },
-  "devDependencies": {}
+  }
 }
